--- a/app/my-component/my-component.template.html
+++ b/app/my-component/my-component.template.html
@@ -1,5 +1,3 @@
-
-
 <div class="full-screen center-content">
 
 	<div class="shadow-box">
@@ -7,7 +5,7 @@
 		<div class="center-content padding-sm bottom-border">
 
 			<h1 class="lightgrey">
-				angularjs-webpack
+				{{ 'TITLE' | translate }}
 			</h1>
 
 		</div>
@@ -17,7 +15,7 @@
 			<div class="padding-sm padding-sm">
 
 				<h1 class="grey">
-					The colour is:
+					{{ 'LABEL' | translate}}
 				</h1>
 
 			</div>
@@ -30,7 +28,6 @@
 
 			</div>
 			
-
 		</div>
 
 		<div class="center-content padding-lg">
@@ -38,7 +35,7 @@
 			<button 
 				class="btn btn-primary" 
 				ng-click="$ctrl.newColor()">
-				Change Colour
+				{{ 'BUTTON' | translate}}
 			</button>
 
 		</div>
